--- a/FroalaBugs/src/app/app/app.component.html
+++ b/FroalaBugs/src/app/app/app.component.html
@@ -1,7 +1,9 @@
 <h2>Froala Bugs</h2>
-<p>Select a bug below</p>
+<p>Click a button to select a bug</p>
 <button (click)="navigateConsoleError()">Froala console error</button>
 <button (click)="navigateDynamicToolbarUpdate()">Dynamic toolbar update</button>
+<button (click)="navigateAddTextCustomBlock()">Add text before custom block</button>
+<button (click)="navigateDragBlock()">Dragging block should not lose styling and html</button>
 <button (click)="closeBugs()">Close bugs</button>
 <hr />
 
