--- a/FroalaBugs/src/app/add-text-before-inserted-custom-block/add-text-before-inserted-custom-block.component.html
+++ b/FroalaBugs/src/app/add-text-before-inserted-custom-block/add-text-before-inserted-custom-block.component.html
@@ -3,7 +3,7 @@
 <p>Reproduction</p>
 <ol>
   <li>Click the question mark button in the toolbar to add a block to the editor.</li>
-  <li>Iit is not possible to add content before the block.</li>
+  <li>It is not possible to add content before the block.</li>
 </ol>
 
 <div (froalaInit)="initialize($event)" [froalaEditor]="froalaOptions"></div>
