Added bold-test component

--- a/FroalaBugs/src/app/app/app.component.html
+++ b/FroalaBugs/src/app/app/app.component.html
@@ -4,6 +4,7 @@
 <button (click)="navigateDynamicToolbarUpdate()">Dynamic toolbar update</button>
 <button (click)="navigateAddTextCustomBlock()">Add text before custom block</button>
 <button (click)="navigateDragBlock()">Dragging block should not lose styling and html</button>
+<button (click)="navigateBoldTest()">Bold test</button>
 <button (click)="closeBugs()">Close bugs</button>
 <hr />
 
