--- a/FroalaBugs/src/app/dynamic-toolbar-update/dynamic-toolbar-update.component.html
+++ b/FroalaBugs/src/app/dynamic-toolbar-update/dynamic-toolbar-update.component.html
@@ -7,7 +7,7 @@
   <li>If you downgrade the Froala version to 3.2.0 or lower and test this again, you will see that the button will be added. You can downgrade by executing the following command in a terminal window: 'npm install angular-froala-wysiwyg@3.2.0''</li>
 </ol>
 
-<div [froalaEditor]="firstEditorOptions" (froalaInit)="initialize($event)">
+<div [froalaEditor]="firstEditorOptions" (froalaInit)="initialize($event)" [(froalaModel)]="value">
 </div>
 
 <br />
