Added new bug. The paste.beforeCleanup event does not paste the returned html.

--- a/FroalaBugs/src/app/app/app.component.html
+++ b/FroalaBugs/src/app/app/app.component.html
@@ -3,6 +3,7 @@
 <button (click)="navigateDynamicToolbarUpdate()">Dynamic toolbar update</button>
 <button (click)="navigateAddTextCustomBlock()">Add text before custom block</button>
 <button (click)="navigateDragBlock()">Dragging block should not lose styling and html</button>
+<button (click)="navigatePasteCleanUp()">Paste cleanup</button>
 <button (click)="closeBugs()">Close bugs</button>
 <hr />
 
