--- a/FroalaBugs/src/app/app/app.component.html
+++ b/FroalaBugs/src/app/app/app.component.html
@@ -1,10 +1,12 @@
-<h2>Froala Bugs</h2>
-<p>Click a button to select a bug</p>
-<button (click)="navigateDynamicToolbarUpdate()">Dynamic toolbar update</button>
-<button (click)="navigateAddTextCustomBlock()">Add text before custom block</button>
-<button (click)="navigateDragBlock()">Dragging block should not lose styling and html</button>
-<button (click)="navigatePasteCleanUp()">Paste cleanup</button>
-<button (click)="closeBugs()">Close bugs</button>
-<hr />
+<div style="padding:16px;">
+  <h2>Froala Bugs</h2>
+  <p>Click a button to select a bug</p>
+  <button (click)="navigateDynamicToolbarUpdate()">Dynamic toolbar update</button>
+  <button (click)="navigateAddTextCustomBlock()">Add text before custom block</button>
+  <button (click)="navigateDragBlock()">Dragging block should not lose styling and html</button>
+  <button (click)="navigatePasteCleanUp()">Paste cleanup</button>
+  <button (click)="closeBugs()">Close bugs</button>
+  <hr />
 
-<router-outlet></router-outlet>
+  <router-outlet></router-outlet>
+</div>
