Added editor adds &nbsp; bug

--- a/FroalaBugs/src/app/app/app.component.html
+++ b/FroalaBugs/src/app/app/app.component.html
@@ -5,6 +5,7 @@
   <button (click)="navigateAddTextCustomBlock()">Add text before custom block</button>
   <button (click)="navigateDragBlock()">Dragging block should not lose styling and html</button>
   <button (click)="navigatePasteCleanUp()">Paste cleanup</button>
+  <button (click)="navigateEditorAddsNbsp()">Editor adds nbsp</button>
   <button (click)="closeBugs()">Close bugs</button>
   <hr />
 
