Added another bug: Creating lists in a custom tag leads to some strage behaviour.

--- a/FroalaBugs/src/app/app/app.component.html
+++ b/FroalaBugs/src/app/app/app.component.html
@@ -6,6 +6,7 @@
   <button (click)="navigateDragBlock()">Dragging block should not lose styling and html</button>
   <button (click)="navigateEditorAddsNbsp()">Editor adds nbsp</button>
   <button (click)="navigatePasteRemovesLineBreaks()">Paste removes line break</button>
+  <button (click)="navigateListInCustomTag()">list in custom tag not working</button>
   <button (click)="closeBugs()">Close bugs</button>
   <hr />
 
