Updated Angular to v18, Adopted the standalone API, removed components and added a bug with material Symbols toolbar highlighting

--- a/FroalaBugs/src/app/app/app.component.html
+++ b/FroalaBugs/src/app/app/app.component.html
@@ -1,14 +1,11 @@
 <div style="padding:16px;">
-  <h2>Froala Bugs</h2>
-  <p>Click a button to select a bug</p>
-  <button (click)="navigateDynamicToolbarUpdate()">Dynamic toolbar update</button>
-  <button (click)="navigateAddTextCustomBlock()">Add text before custom block</button>
-  <button (click)="navigateDragBlock()">Dragging block should not lose styling and html</button>
-  <button (click)="navigateEditorAddsNbsp()">Editor adds nbsp</button>
-  <button (click)="navigatePasteRemovesLineBreaks()">Paste removes line break</button>
-  <button (click)="navigateListInCustomTag()">list in custom tag not working</button>
-  <button (click)="closeBugs()">Close bugs</button>
-  <hr />
+    <h2>Froala Bugs</h2>
+    <p>Click a button to select a bug</p>
+    <button (click)="navigateAddTextCustomBlock()">Add text before custom block</button>
+    <button (click)="navigatePasteRemovesLineBreaks()">Paste removes line break</button>
+    <button (click)="navigateToolbarNoActiveStyle()">Toolbar no active style with material icons or symbols</button>
+    <button (click)="closeBugs()">Close bugs</button>
+    <hr />
 
-  <router-outlet></router-outlet>
+    <router-outlet></router-outlet>
 </div>
